{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 202,
  "lineage": "1a7fb92f-7c59-93c4-cf5c-e87a96f8805c",
  "resources": [
    {
      "module": "module.linuxservers",
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "integral-caiman",
            "fqdn": "integral-caiman.southeastasia.cloudapp.azure.com",
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/publicIPAddresses/weather-vm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.24.150.169",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "weather-vm-pip-0",
            "resource_group_name": "weather-rg",
            "sku": "Basic",
            "tags": {
              "source": "terraform"
            }
          }
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkInterfaces/weather-vm-nic-0",
            "internal_domain_name_suffix": "1v5kfmk22ptezkmoalcn1g2h2f.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "weather-vm-ip-0",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/publicIPAddresses/weather-vm-pip-0",
                "subnet_id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/virtualNetworks/weather-vnet/subnets/subnet1"
              }
            ],
            "location": "southeastasia",
            "name": "weather-vm-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "weather-rg",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network",
            "random_pet.name"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkInterfaces/weather-vm-nic-0|/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkSecurityGroups/weather-vm-nsg",
            "network_interface_id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkInterfaces/weather-vm-nic-0",
            "network_security_group_id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkSecurityGroups/weather-vm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.linuxservers.azurerm_network_interface.vm",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.azurerm_public_ip.vm",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network",
            "random_pet.name"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkSecurityGroups/weather-vm-nsg",
            "location": "southeastasia",
            "name": "weather-vm-nsg",
            "resource_group_name": "weather-rg",
            "security_rule": [],
            "tags": {
              "source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/networkSecurityGroups/weather-vm-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "weather-vm-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "weather-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "0.0.0.0/0"
            ],
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.linuxservers.azurerm_network_security_group.vm",
            "module.linuxservers.data.azurerm_resource_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.linuxservers",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "integral-caiman",
            "fqdn": "integral-caiman.southeastasia.cloudapp.azure.com",
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/publicIPAddresses/weather-vm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "weather-vm-pip-0",
            "resource_group_name": "weather-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.linuxservers.data.azurerm_resource_group.vm",
            "random_pet.name"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/virtualNetworks/weather-vnet/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "weather-rg",
            "virtual_network_name": "weather-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.network.azurerm_virtual_network.vnet",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b1a27edd-e35c-4ce6-a98e-02c4dd9b87e5",
            "id": "/subscriptions/aaa4626c-5934-48ca-a66d-27a8fee382c1/resourceGroups/weather-rg/providers/Microsoft.Network/virtualNetworks/weather-vnet",
            "location": "southeastasia",
            "name": "weather-vnet",
            "resource_group_name": "weather-rg",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.weather-rg",
            "module.network.data.azurerm_resource_group.network"
          ]
        }
      ]
    }
  ]
}